k8s/base/ai-service/deploymend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-service
  namespace: shporaai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-service
  template:
    metadata:
      labels:
        app: ai-service
    spec:
      containers:
        - name: ai-service
          image: ghcr.io/stillnotenough/ai-service:sha-ac8a020
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 5
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
